--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ name = "pypi"
 
 [packages]
 gunicorn = "==19.9.0"
+django-heroku = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.8"
+django_version = "3.1.7"
